--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -21,11 +21,13 @@ services:
       - ASPNETCORE_HTTP_PORTS=8080
       - ASPNETCORE_HTTPS_PORTS=8081
       - ConnectionStrings__Database=Server=catalogdb;Port=5432;Database=CatalogDb;User Id=postgres;Password=postgres;Include Error Detail=true
+      - ASPNETCORE_Kestrel__Certificates__Default__Password=Password0!
+      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/catalogapi.pfx
     depends_on:
       - catalogdb
     ports:
       - "6000:8080"
       - "6060:8081"
     volumes:
-      - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
-      - ${APPDATA}/.aspnet/Https:/home/app/.aspnet/https:ro
+      - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
+      - ${USERPROFILE}/.cert/https:/https:ro
