--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -3,7 +3,8 @@ version: '3.4'
 services:
   catalogdb:
     image: postgres
-  
+  basketdb:
+    image: postgres
   
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
@@ -13,3 +14,4 @@ services:
 
 volumes:
   postgres_catalog:
+  postgres_basket:
