redis cache added

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -11,6 +11,15 @@ services:
     build:
       context: .
       dockerfile: Services/Catalog/Catalog.API/Dockerfile
+  
+  basket.api:
+    image: ${DOCKER_REGISTRY-}basketapi
+    build:
+      context: .
+      dockerfile: Services/Basket/Basket.API/Dockerfile
+      
+  distributedcache:
+    image: redis
 
 volumes:
   postgres_catalog:
