--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     image: postgres
   basketdb:
     image: postgres
+  distributedcache:
+    image: redis
   
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
@@ -17,9 +19,12 @@ services:
     build:
       context: .
       dockerfile: Services/Basket/Basket.API/Dockerfile
-      
-  distributedcache:
-    image: redis
+  
+  discount.grpc:
+    image: ${DOCKER_REGISTRY-}discountgrpc
+    build:
+      context: .
+      dockerfile: Services/Discount/Discount.Grpc/Dockerfile
 
 volumes:
   postgres_catalog:
