--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -56,6 +56,7 @@ services:
       - ASPNETCORE_HTTPS_PORTS=8081
       - ConnectionStrings__Database=Server=basketdb;Port=5432;Database=BasketDb;User Id=postgres;Password=postgres;Include Error Detail=true
       - ConnectionStrings__Redis=distributedcache:6379
+      - GrpcSettings__DiscountUrl=https://discount.grpc:8081
       - ASPNETCORE_Kestrel__Certificates__Default__Password=Password0!
       - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/basketapi.pfx
     depends_on:
