--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -3,11 +3,16 @@ version: '3.4'
 services:
   catalogdb:
     image: postgres
+  
   basketdb:
     image: postgres
+  
   distributedcache:
     image: redis
   
+  orderdb:
+    image: mcr.microsoft.com/mssql/server
+    
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
     build:
